--- a/Test-Maven-1/Jenkinsfile
+++ b/Test-Maven-1/Jenkinsfile
@@ -9,13 +9,13 @@ pipeline{
       
       stage('Clean'){
           steps{
-          
+            bat 'mvn clean'
           }
       }
       
       stage('Install'){
           steps{
-          
+            bat 'mvn install'
           }
       }
     }
