--- a/Test-Maven-1/Jenkinsfile
+++ b/Test-Maven-1/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline{
       
       stage('Install'){
           steps{
-            bat 'mvn install'
+            bat 'mvn clean install sonar:sonar -Dsonar.host.url=http://localhost:9000 -Dsonar.analysis.mode=publish'
           }
       }
     }
