--- a/Test-Maven-1/Jenkinsfile
+++ b/Test-Maven-1/Jenkinsfile
@@ -15,7 +15,14 @@ pipeline{
       
       stage('Install'){
           steps{
-            bat 'mvn clean install sonar:sonar -Dsonar.host.url=http://localhost:9000 -Dsonar.analysis.mode=publish'
+            bat 'mvn install'
+          }
+      }
+        
+      
+      stage('Sonar'){
+          steps{
+            bat 'mvn sonar:sonar -Dsonar.host.url=http://localhost:9000 -Dsonar.analysis.mode=publish'
           }
       }
     }
